js/src/tests/test262/language/import/import-defer/errors/module-throws/import-defer-throws_FIXTURE.js
import
defer
*
as
ns
from
"
.
/
throws_FIXTURE
.
js
"
;
export
{
ns
}
;
